# backend/api/swagger.yaml
@@ -915,7 +915,7 @@ paths:
           description: bad request
         "500":
           description: Unexpected error
-  /customer/{userID}/store/{storeID}/checkout:
+  /customer/{userID}/checkout:
     post:
       tags:
       - customer
@@ -927,16 +927,6 @@ paths:
       - name: userID
         in: path
         description: The ID of the user .
-        required: true
-        content:
-          application/json:
-            schema:
-              type: string
-              example: "1"
-              x-content-type: application/json
-      - name: storeID
-        in: path
-        description: The ID of the store .
         required: true
         content:
           application/json:
